# Proyecto-Integrado-Almiron---Lallera

./: README.md  ReadMe.me  ambiente.yml  prueba.python  pyproject.toml
bioimagenes/: README.md  pyproject.toml
bioimagenes/src/bioimagenes/core/: historial.py  imagen.py  info.py
bioimagenes/tests/: test_info.py
src/bioimagenes/core/: __init__.py  imagen.py  info.py
src/bioimagenes/filtros/: filtro.py
src/bioimagenes/medicas/: imagen_termografica.py
tests/: test_filtro.py  test_historial.py  test_imagen.py  test_termografia.py
