[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioimagenes"
version = "0.1.0"
description = "Librería Python para procesamiento, análisis y visualización de imágenes biomédicas (tomografías, radiografías, termografías)."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Fernando Almirón" },
    { name = "Rafael Lallera" },
]
requires-python = ">=3.11"
keywords = ["biomedical", "imaging", "medical-imaging", "tomography", "radiography", "thermography", "image-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Repository = "https://github.com/fernando-almiron/bioimagenes"

[tool.hatch.build.targets.wheel]
packages = ["src/bioimagenes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["src/bioimagenes"]
omit = ["tests/*", "**/__pycache__/*"]